--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,8 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 }
 
@@ -50,4 +50,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02'
 
     implementation 'org.jetbrains.anko:anko:0.10.8'
+    implementation "androidx.work:work-runtime-ktx:2.2.0-rc01"
+
+
 }
